fixed nav bar on mobile

--- a/css/master.css
+++ b/css/master.css
@@ -271,10 +271,17 @@ h2 {
 @media (max-width:1000px) {
   .kol4{grid-column: 2/12}
   .kol5{grid-column: 2/12}
+
+  body nav ul li a {
+    font-size: 2.5vw;
+  }
 }
 
 @media (max-width:650px) {
   .kol5{grid-column: 1/13}
   .kol4{grid-column: 1/13}
 
+  body nav ul li a {
+    font-size: 2.85vw;
+  }
 }
